app/src/main/java/com/example/darkfox/trainingnotes/models/errors/FirebaseRegisterException.kt
package com.example.darkfox.trainingnotes.models.errors

class FirebaseRegisterException(val failCause:String = "") : Exception(failCause)